--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body{
      font-style: normal;
      letter-spacing:1px;
  }
- starsButton{
+ /*starsButton{
      background-color: #653fe1;
      color: white;
- }
+ }*/
